Basic ViewModel functionality with recycleView

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ro.unibuc.votingapp.presentation.view.PavGameHomeLoadingView
+    <ro.unibuc.votingapp.presentation.view.VoteHomeLoadingView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/space_8"
