--- a/app/src/main/res/layout/fragment_formalpolls.xml
+++ b/app/src/main/res/layout/fragment_formalpolls.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ro.unibuc.votingapp.presentation.fragments.HomeFragment">
+    tools:context="ro.unibuc.votingapp.presentation.fragments.OfficialPollsFragment">
 
     <TextView
         android:id="@+id/text_home"
@@ -19,18 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ro.unibuc.votingapp.presentation.view.VoteHomeLoadingView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/space_8"
-        app:layout_constraintBottom_toBottomOf="@id/text_home"
-        app:layout_constraintEnd_toEndOf="@id/text_home"
-        app:layout_constraintStart_toStartOf="@id/text_home"
-        app:layout_constraintTop_toTopOf="@id/text_home"
-        app:loadingColor="?attr/colorPrimary" />
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabhome"
+        android:id="@+id/fabformal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -38,4 +28,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_dialog_dialer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
